{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 2634,
  "lineage": "3195ed2a-c29e-81f9-2386-8ad7fc79070d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "eastus",
            "name": "aks-nsg",
            "resource_group_name": "aks-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_pod_subnet_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "0.0.0.0/0"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/pod-subnet-outbound",
            "name": "pod-subnet-outbound",
            "network_security_group_name": "aks-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "aks-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.132.0/22",
              "10.0.136.0/22"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.pod_subnet_1",
            "azurerm_subnet.pod_subnet_2",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_pod_to_pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.132.0/22",
              "10.0.136.0/22"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/pod-to-pod-inbound",
            "name": "pod-to-pod-inbound",
            "network_security_group_name": "aks-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "aks-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.132.0/22",
              "10.0.136.0/22"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.pod_subnet_1",
            "azurerm_subnet.pod_subnet_2",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_node_to_pod_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.132.0/22",
              "10.0.136.0/22"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/deny-node-to-pod-subnet",
            "name": "deny-node-to-pod-subnet",
            "network_security_group_name": "aks-nsg",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "aks-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.124.0/27",
              "10.0.124.32/27"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.node_subnet_1",
            "azurerm_subnet.node_subnet_2",
            "azurerm_subnet.pod_subnet_1",
            "azurerm_subnet.pod_subnet_2",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_pod_to_node_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.124.0/27",
              "10.0.124.32/27"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/deny-pod-to-node-subnet",
            "name": "deny-pod-to-node-subnet",
            "network_security_group_name": "aks-nsg",
            "priority": 102,
            "protocol": "*",
            "resource_group_name": "aks-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.132.0/22",
              "10.0.136.0/22"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.node_subnet_1",
            "azurerm_subnet.node_subnet_2",
            "azurerm_subnet.pod_subnet_1",
            "azurerm_subnet.pod_subnet_2",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_firewall_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "delegation": [
              {
                "name": "name-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-firewall-subnet",
            "name": "aks-firewall-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_service_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "delegation": [
              {
                "name": "name-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-backend-service-subnet",
            "name": "aks-backend-service-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default_node_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/default-node-pool",
            "name": "default-node-pool",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default_pod_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.128.0/22"
            ],
            "delegation": [
              {
                "name": "name-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/default_pod_pool",
            "name": "default_pod_pool",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "node_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.124.0/27"
            ],
            "delegation": [
              {
                "name": "name-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-node-subnet-1",
            "name": "aks-node-subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "node_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.124.32/27"
            ],
            "delegation": [
              {
                "name": "name-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-node-subnet-2",
            "name": "aks-node-subnet-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pod_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.132.0/22"
            ],
            "delegation": [
              {
                "name": "name-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-pod-subnet-1",
            "name": "aks-pod-subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pod_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.136.0/22"
            ],
            "delegation": [
              {
                "name": "name-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-pod-subnet-2",
            "name": "aks-pod-subnet-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-rg",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks_firewall_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-firewall-subnet",
            "network_security_group_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "subnet_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-firewall-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.aks_firewall_subnet",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "backend_service_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-backend-service-subnet",
            "network_security_group_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "subnet_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-backend-service-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.backend_service_subnet",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "node_subnet_1_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-node-subnet-1",
            "network_security_group_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "subnet_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-node-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.node_subnet_1",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "node_subnet_2_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-node-subnet-2",
            "network_security_group_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "subnet_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-node-subnet-2"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.node_subnet_2",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pod_subnet_1_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-pod-subnet-1",
            "network_security_group_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "subnet_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-pod-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.pod_subnet_1",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pod_subnet_2_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-pod-subnet-2",
            "network_security_group_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "subnet_id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-pod-subnet-2"
          },
          "dependencies": [
            "azurerm_network_security_group.aks_nsg",
            "azurerm_resource_group.aks_rg",
            "azurerm_subnet.pod_subnet_2",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "db4b4c90-b426-4b5e-b36f-63968b327d4f",
            "id": "/subscriptions/b5d3c617-3046-430c-98e3-2582f594fcaf/resourceGroups/aks-rg/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "eastus",
            "name": "aks-vnet",
            "resource_group_name": "aks-rg"
          },
          "dependencies": [
            "azurerm_resource_group.aks_rg"
          ]
        }
      ]
    }
  ]
}